--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,16 +54,16 @@ services:
     environment:
       OTELGUARD_PORT: 8080
       OTELGUARD_ENV: development
-      OTELGUARD_POSTGRES_HOST: postgres
-      OTELGUARD_POSTGRES_PORT: 5432
-      OTELGUARD_POSTGRES_USER: otelguard
-      OTELGUARD_POSTGRES_PASSWORD: otelguard
-      OTELGUARD_POSTGRES_DB: otelguard
-      OTELGUARD_CLICKHOUSE_HOST: clickhouse
-      OTELGUARD_CLICKHOUSE_PORT: 9000
-      OTELGUARD_CLICKHOUSE_DB: otelguard
-      OTELGUARD_JWT_SECRET: ${JWT_SECRET:-your-super-secret-jwt-key-change-in-production}
-      OTELGUARD_API_KEY_SALT: ${API_KEY_SALT:-your-api-key-salt-change-in-production}
+      POSTGRES_HOST: postgres
+      POSTGRES_PORT: 5432
+      POSTGRES_USER: otelguard
+      POSTGRES_PASSWORD: otelguard
+      POSTGRES_DB: otelguard
+      CLICKHOUSE_HOST: clickhouse
+      CLICKHOUSE_PORT: 9000
+      CLICKHOUSE_DB: otelguard
+      JWT_SECRET: ${JWT_SECRET:-your-super-secret-jwt-key-change-in-production}
+      API_KEY_SALT: ${API_KEY_SALT:-your-api-key-salt-change-in-production}
     ports:
       - "8080:8080"
     depends_on:
