--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "dagre": "^0.8.5",
     "date-fns": "^3.6.0",
     "diff": "^5.2.0",
     "embla-carousel-react": "^8.6.0",
@@ -72,6 +73,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
+    "@types/dagre": "^0.7.53",
     "@types/diff": "^5.2.1",
     "@types/node": "^20.14.2",
     "@types/react": "^18.3.3",
